--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <section id="contact" class="section">
       <h3>Contact</h3>
-      <p>Email: <a href="mailto:hello@wolfpastryvt.com">hello@wolfpastryvt.com</a></p>
+      <p>Email: <a href="mailto:hello@wolfpastrystudio.com">hello@wolfpastrystudio.com</a></p>
     </section>
   </main>
 
