--- a/index.html
+++ b/index.html
@@ -152,16 +152,38 @@
       </div>
     </section>
 
-    <section id="contact" class="section">
-      <h3>Contact</h3>
-      <p>Email: <a href="mailto:hello@wolfpastrystudio.com">hello@wolfpastrystudio.com</a></p>
-    </section>
-  </main>
+<section id="contact" class="section">
+  <h3>Contact</h3>
+  <p>
+    Email: <a href="mailto:hello@wolfpastrystudio.com">hello@wolfpastrystudio.com</a>
+  </p>
+  <button type="button" class="btn secondary" onclick="openEmailModal()">Show email (copy/paste)</button>
+</section>
 
   <footer class="site-footer">
     <p>© <span id="year"></span> WolfPastry Studio • All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
+   
+<div id="emailModal" class="modal" hidden aria-hidden="true">
+  <div class="modal-backdrop" onclick="closeEmailModal()"></div>
+  <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="emailModalTitle">
+    <h4 id="emailModalTitle">Contact email</h4>
+    <p>Copy this address and paste it into your mail app or webmail.</p>
+
+    <div class="copy-row">
+      <input id="emailToCopy" type="text" value="hello@wolfpastrystudio.com" readonly>
+      <button class="btn" type="button" onclick="copyEmailFromModal()">Copy</button>
+    </div>
+
+    <p id="copyStatus" class="note" aria-live="polite"></p>
+
+    <div class="modal-actions">
+      <button class="btn secondary" type="button" onclick="closeEmailModal()">Close</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
