--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     </div>
     <nav class="nav" id="nav">
       <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
-      <ul class="nav-list">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#art">Art</a></li>
-        <li><a href="#commissions">Commissions</a></li>
-        <li><a href="#stream">Stream</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+     <ul class="nav-list">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="art.html">Art</a></li>
+  <li><a href="commissions.html">Commissions</a></li>
+  <li><a href="stream.html">Stream</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
     </nav>
   </header>
 
