--- a/commissions.html
+++ b/commissions.html
@@ -29,7 +29,7 @@
 </header>
 
 <main>
-<section id="commissions" class="section">
+<section class="section">
       <h3>Commissions</h3>
       <div class="grid two">
         <div>
