--- a/art/index.html
+++ b/art/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Art • WolfPastry Studio</title>
   <meta name="description" content="Art gallery by WolfPastryVT." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="../styles.css" />
   <link rel="icon" href="assets/favicon.ico" />
 </head>
 <body>
@@ -18,12 +18,13 @@
   <nav class="nav" id="nav">
     <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
     <ul class="nav-list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="art.html">Art</a></li>
-      <li><a href="commissions.html">Commissions</a></li>
-      <li><a href="stream.html">Stream</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/art/">Art</a></li>
+      <li><a href="/commissions/">Commissions</a></li>
+      <li><a href="/stream/">Stream</a></li>
+      <li><a href="/merch/">Merch</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/contact/">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -51,6 +52,6 @@
   <p>© <span id="year"></span> WolfPastry Studio • All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script>
+<script src="../script.js"></script>
 </body>
 </html>
