--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     <nav class="nav" id="nav">
       <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
      <ul class="nav-list">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="art.html">Art</a></li>
-  <li><a href="commissions.html">Commissions</a></li>
-  <li><a href="stream.html">Stream</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a href="contact.html">Contact</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/art/">Art</a></li>
+      <li><a href="/commissions/">Commissions</a></li>
+      <li><a href="/stream/">Stream</a></li>
+      <li><a href="/merch/">Merch</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/contact/">Contact</a></li>
 </ul>
     </nav>
   </header>
