--- a/stream/index.html
+++ b/stream/index.html
@@ -18,7 +18,7 @@
   <nav class="nav" id="nav">
     <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
     <ul class="nav-list">
-      li><a href="/">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="/art/">Art</a></li>
       <li><a href="/commissions/">Commissions</a></li>
       <li><a href="/stream/">Stream</a></li>
