--- a/index.html
+++ b/index.html
@@ -45,6 +45,33 @@
       </div>
     </section>
 
+    <!-- Quick links / feature cards -->
+  <section class="section">
+    <div class="grid gallery">
+      <a class="card" href="/art/" style="text-decoration:none;">
+        <figure>
+          <img src="assets/art/sample1.jpg" alt="Art gallery" loading="lazy">
+          <figcaption><strong>Art Gallery</strong> — Emotes, panels, illustrations</figcaption>
+        </figure>
+      </a>
+
+      <a class="card" href="/commissions/" style="text-decoration:none;">
+        <figure>
+          <img src="assets/cover.jpg" alt="Commissions" loading="lazy">
+          <figcaption><strong>Commissions</strong> — Pricing, TOS, request form</figcaption>
+        </figure>
+      </a>
+
+      <a class="card" href="/stream/" style="text-decoration:none;">
+        <figure>
+          <img src="assets/cover.jpg" alt="Stream hub" loading="lazy">
+          <figcaption><strong>Stream Hub</strong> — Schedule, embeds, highlights</figcaption>
+        </figure>
+      </a>
+    </div>
+  </section>
+</main>
+
   <footer class="site-footer">
     <p>© <span id="year"></span> WolfPastry Studio • All rights reserved.</p>
   </footer>
