--- a/merch/index.html
+++ b/merch/index.html
@@ -1,1 +1,73 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Merch • WolfPastry Studio</title>
+  <meta name="description" content="Official merch by WolfPastry Studio.">
+  <link rel="stylesheet" href="../styles.css" />
+  <link rel="icon" href="../assets/favicon.ico" />
+</head>
+<body>
+<header class="site-header">
+  <div class="brand">
+    <img src="../assets/logo.png" alt="WolfPastry Studio logo" class="logo" onerror="this.style.display='none'">
+    <h1>WolfPastry Studio</h1>
+    <p class="tagline">Art ✦ Streaming ✦ Commissions</p>
+  </div>
+  <nav class="nav" id="nav">
+    <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
+    <ul class="nav-list">
+      <li><a href="/">Home</a></li>
+      <li><a href="/art/">Art</a></li>
+      <li><a href="/commissions/">Commissions</a></li>
+      <li><a href="/stream/">Stream</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/contact/">Contact</a></li>
+      <li><a href="/merch/">Merch</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-inner">
+      <h2>Merch — Coming Soon</h2>
+      <p>Hoodies, stickers, pins, and more. Check back soon or follow my socials!</p>
+      <div class="cta-group">
+        <a class="btn" href="/contact/">Get notified</a>
+        <a class="btn secondary" href="/">Back to Home</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Placeholder grid (you can replace these cards later) -->
+  <section class="section">
+    <h3>Preview Lineup</h3>
+    <div class="grid gallery">
+      <figure class="card">
+        <img src="../assets/cover.jpg" alt="Placeholder hoodie" loading="lazy" onerror="this.style.display='none'">
+        <figcaption><strong>Wolf Hoodie</strong> — Cozy winter-wolf vibes</figcaption>
+      </figure>
+      <figure class="card">
+        <img src="../assets/cover.jpg" alt="Placeholder sticker pack" loading="lazy" onerror="this.style.display='none'">
+        <figcaption><strong>Sticker Pack</strong> — Luna & emotes set</figcaption>
+      </figure>
+      <figure class="card">
+        <img src="../assets/cover.jpg" alt="Placeholder enamel pin" loading="lazy" onerror="this.style.display='none'">
+        <figcaption><strong>Enamel Pin</strong> — Moonfang crest</figcaption>
+      </figure>
+    </div>
+    <p class="note" style="margin-top:10px;">Tip: Replace images later with files in <code>assets/merch/</code> and update the <code>src</code> paths.</p>
+  </section>
+</main>
+
+<footer class="site-footer">
+  <p>© <span id="year"></span> WolfPastry Studio • All rights reserved.</p>
+</footer>
+
+<script src="../script.js"></script>
+</body>
+</html>
 
