--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
           <figcaption><strong>Stream Hub</strong> — Schedule, embeds, highlights</figcaption>
         </figure>
       </a>
+
+      <a class="card" href="/merch/" style="text-decoration:none;">
+        <figure>
+          <img src="assets/cover.jpg" alt="Merch coming soon" loading="lazy" onerror="this.style.display='none'">
+          <figcaption><strong>Merch</strong> — Hoodies, stickers, pins (coming soon)</figcaption>
+        </figure>
+      </a>
     </div>
   </section>
 </main>
