--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
     </div>
     <nav class="nav" id="nav">
       <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
-     <ul class="nav-list">
-      <li><a href="/">Home</a></li>
-      <li><a href="/art/">Art</a></li>
-      <li><a href="/commissions/">Commissions</a></li>
-      <li><a href="/stream/">Stream</a></li>
-      <li><a href="/merch/">Merch</a></li>
-      <li><a href="/about/">About</a></li>
-      <li><a href="/contact/">Contact</a></li>
-</ul>
+       <ul class="nav-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/art/">Art</a></li>
+        <li><a href="/commissions/">Commissions</a></li>
+        <li><a href="/stream/">Stream</a></li>
+        <li><a href="/merch/">Merch</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/contact/">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <section id="home" class="hero">
+    <section class="hero">
       <div class="hero-inner">
-        <h2>Welcome to WolfPastry Studio</h2>
+        <h2 class="text-brand-gradient">Welcome to WolfPastry Studio</h2>
         <p>Your one‑stop hub for my VTuber content and freelance art.</p>
         <div class="cta-group">
-          <a class="btn" href="#commissions">Open Commissions</a>
-          <a class="btn secondary" href="#art">View Gallery</a>
+          <a class="btn" href="/commissions/">Open Commissions</a>
+          <a class="btn secondary" href="/art/">View Gallery</a>
         </div>
       </div>
     </section>
