--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Art • WolfPastry Studio</title>
-  <meta name="description" content="Art gallery by WolfPastryVT." />
+  <title>About • WolfPastry Studio</title>
+  <meta name="description" content="About WolfPastryVT — streamer and artist." />
   <link rel="stylesheet" href="../styles.css" />
   <link rel="icon" href="assets/favicon.ico" />
 </head>
@@ -31,21 +31,24 @@
 
 <main>
 <section class="section">
-      <h3>About</h3>
-      <p>Hey! I'm <strong>WolfPastryVT</strong>—a streamer and freelance artist. I love winter wolf vibes, moon motifs, and cozy communities. This site is my studio HQ.</p>
-      <ul class="about-list">
-        <li><strong>Tools:</strong> Clip Studio / Photoshop / Live2D / VSCode</li>
-        <li><strong>Rig:</strong> CPU/GPU specs here</li>
-        <li><strong>Socials:</strong> Add links below</li>
-      </ul>
-      <div class="socials">
-        <a href="#" aria-label="Twitch">Twitch</a>
-        <a href="#" aria-label="YouTube">YouTube</a>
-        <a href="#" aria-label="X/Twitter">X</a>
-        <a href="#" aria-label="Bluesky">Bluesky</a>
-        <a href="#" aria-label="Ko-fi">Ko‑fi</a>
-      </div>
-    </section>
+  <h3>About WolfPastry</h3>
+  <p>Hi! I'm <strong>WolfPastry</strong> — a streamer and artist with winter-wolf vibes and a cozy community focus.</p>
+
+  <h4>Boundaries</h4>
+  <p>Please respect my comfort zone and platform rules. If a Mod/Admin/Wolf asks you to stop, do so.</p>
+
+  <h4>Socials</h4>
+  <div class="socials">
+    <a href="https://twitch.tv/WolfPastryVT" target="_blank" rel="noopener">Twitch</a>
+    <a href="https://www.youtube.com/@WolfPastryVT" target="_blank" rel="noopener">YouTube</a>
+    <a href="https://twitter.com/wolf_pastry" target="_blank" rel="noopener">Twitter/X</a>
+    <a href="https://bsky.app/profile/wolfpastryvt.bsky.social" target="_blank" rel="noopener">Bluesky</a>
+    <a href="https://ko-fi.com/wolfpastryvt" target="_blank" rel="noopener">Ko‑fi</a>
+    <a href="https://vgen.co/wolfpastryvt" target="_blank" rel="noopener">VGen</a>
+    <a href="https://tellonym.me/wolfpastryvt" target="_black" rel="noopener">Tellonym</a>
+    <a href="https://throne.me/wolfpastryvt" target="_blank" rel="noopener">Wishlist</a>
+  </div>
+</section>
   
 </main>
 
