--- a/about/index.html
+++ b/about/index.html
@@ -31,8 +31,25 @@
 
 <main>
 <section class="section">
-  <h3>About WolfPastry</h3>
+  <div class="about-split">
+    <!-- Left: signature image -->
+    <aside class="signature-box">
+      <img src="../assets/about/signature.png" alt="WolfPastry Studio signature" loading="lazy">
+      <p class="caption">Signature — WolfPastry Studio</p>
+    </aside>
+  </div>
+  <h3 class="text-brand-gradient">About WolfPastry</h3>
   <p>Hi! I'm <strong>WolfPastry</strong> — a streamer and artist with winter-wolf vibes and a cozy community focus.</p>
+
+  <h4>Get to know me!</h4>
+  <p>You can call me Wolf if you'd like, I use she/her pronouns</p>
+  <p>Nicknames ➭ People are welcome to give me nicknames as long as I agree to the said name</p>
+  <p>Likes ➭ When people respect my boundaries, any shade of blue, listening to music, meeting new people and having fun!</p>
+  <p>Hobbies ➭ Gaming, and streaming for fun and for the community, reading, drawing/making art</p>  
+  <p>Extra ➭ I am 5'7 and I support the LGBTQ+ community as an ally and other info is linked below</p>
+  <div class="more-info">
+    <a href="https://en.pronouns.page/@WolfPastry" target="_blank" rel="noopener">Other Info</a>
+  </div>
 
   <h4>Boundaries</h4>
   <p>Please respect my comfort zone and platform rules. If a Mod/Admin/Wolf asks you to stop, do so.</p>
