--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
   <div class="about-split">
     <!-- Left: signature image -->
     <aside class="signature-box">
-      <img src="../assets/about/signature.png" alt="WolfPastry Studio signature" loading="lazy">
+      <img src="../assets/signature.png" alt="WolfPastry Studio signature" loading="lazy">
       <p class="caption">Signature — WolfPastry Studio</p>
     </aside>
   </div>
