--- a/about/index.html
+++ b/about/index.html
@@ -32,12 +32,8 @@
 <main>
 <section class="section">
   <div class="about-split">
-    <!-- Left: signature image -->
-    <aside class="signature-box">
-      <img src="../assets/signature.png" alt="WolfPastry Studio signature" loading="lazy">
-      <p class="caption">Signature — WolfPastry Studio</p>
-    </aside>
-  </div>
+    <!-- Left: text -->
+    <div class="about-main">
   <h3 class="text-brand-gradient">About WolfPastry</h3>
   <p>Hi! I'm <strong>WolfPastry</strong> — a streamer and artist with winter-wolf vibes and a cozy community focus.</p>
 <br>
@@ -64,6 +60,12 @@
     <a href="https://vgen.co/wolfpastryvt" target="_blank" rel="noopener">VGen</a>
     <a href="https://tellonym.me/wolfpastryvt" target="_black" rel="noopener">Tellonym</a>
     <a href="https://throne.me/wolfpastryvt" target="_blank" rel="noopener">Wishlist</a>
+</div>
+     <!-- Right: signature image + caption -->
+    <aside class="signature-card">
+      <img src="/assets/about/signature.png" alt="WolfPastry Studio signature" loading="lazy">
+      <p class="caption">Signature — WolfPastry Studio</p>
+    </aside>
   </div>
 </section>
   
