--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
 </div>
      <!-- Right: signature image + caption -->
     <aside class="signature-card">
-      <img src="/assets/about/signature.png" alt="WolfPastry Studio signature" loading="lazy">
+      <img src="/assets/signature.png" alt="WolfPastry Studio signature" loading="lazy">
       <p class="caption">Signature — WolfPastry Studio</p>
     </aside>
   </div>
