--- a/about/index.html
+++ b/about/index.html
@@ -60,6 +60,7 @@
     <a href="https://vgen.co/wolfpastryvt" target="_blank" rel="noopener">VGen</a>
     <a href="https://tellonym.me/wolfpastryvt" target="_black" rel="noopener">Tellonym</a>
     <a href="https://throne.me/wolfpastryvt" target="_blank" rel="noopener">Wishlist</a>
+  </div>
 </div>
      <!-- Right: signature image + caption -->
     <aside class="signature-card">
