--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
      <!-- Right: signature image + caption -->
     <aside class="signature-card">
       <img src="/assets/signature.png" alt="WolfPastry Studio signature" loading="lazy">
-      <p class="caption">Signature — WolfPastry Studio</p>
+      <p class="caption">Signature — Made by @Abortius on X</p>
     </aside>
   </div>
 </section>
