--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="WolfPastry Studio">
   <meta property="og:description" content="Art portfolio, VTuber hub, and commissions.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/cover.jpg">
+  <meta property="og:image" content="assets/cover.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="assets/favicon.ico">
 </head>
@@ -41,6 +41,7 @@
         <div class="cta-group">
           <a class="btn" href="/commissions/">Open Commissions</a>
           <a class="btn secondary" href="/art/">View Gallery</a>
+          <a class="btn third" href="/art/">View Merch</a>
         </div>
       </div>
     </section>
@@ -50,28 +51,28 @@
     <div class="grid gallery">
       <a class="card" href="/art/" style="text-decoration:none;">
         <figure>
-          <img src="assets/art/sample1.jpg" alt="Art gallery" loading="lazy">
+          <img src="assets/sample1.png" alt="Art gallery" loading="lazy">
           <figcaption><strong>Art Gallery</strong> — Emotes, panels, illustrations</figcaption>
         </figure>
       </a>
 
       <a class="card" href="/commissions/" style="text-decoration:none;">
         <figure>
-          <img src="assets/cover.jpg" alt="Commissions" loading="lazy">
+          <img src="assets/cover.png" alt="Commissions" loading="lazy">
           <figcaption><strong>Commissions</strong> — Pricing, TOS, request form</figcaption>
         </figure>
       </a>
 
       <a class="card" href="/stream/" style="text-decoration:none;">
         <figure>
-          <img src="assets/cover.jpg" alt="Stream hub" loading="lazy">
+          <img src="assets/cover.png" alt="Stream hub" loading="lazy">
           <figcaption><strong>Stream Hub</strong> — Schedule, embeds, highlights</figcaption>
         </figure>
       </a>
 
       <a class="card" href="/merch/" style="text-decoration:none;">
         <figure>
-          <img src="assets/cover.jpg" alt="Merch coming soon" loading="lazy" onerror="this.style.display='none'">
+          <img src="assets/cover.png" alt="Merch coming soon" loading="lazy" onerror="this.style.display='none'">
           <figcaption><strong>Merch</strong> — Hoodies, stickers, pins (coming soon)</figcaption>
         </figure>
       </a>
