--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+h<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -39,9 +39,9 @@
         <h2 class="text-brand-gradient">Welcome to WolfPastry Studio</h2>
         <p>Your one‑stop hub for my VTuber content and freelance art.</p>
         <div class="cta-group">
-          <a class="btn" href="/commissions/">Open Commissions</a>
+          <a class="btn" href="/commissions/">Available Commissions</a>
           <a class="btn secondary" href="/art/">View Gallery</a>
-          <a class="btn third" href="/art/">View Merch</a>
+          <a class="btn third" href="/merch/">Explore Merch</a>
         </div>
       </div>
     </section>
