--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <h2 class="text-brand-gradient">Welcome to WolfPastry Studio</h2>
         <p>Your one‑stop hub for my VTuber content and freelance art.</p>
         <div class="cta-group">
-          <a class="btn" href="/commissions/">Available Commissions</a>
-          <a class="btn secondary" href="/art/">View Gallery</a>
+          <a class="btn" href="/art/">View Gallery</a>
+          <a class="btn secondary" href="/commissions/">Available Commissions</a>
           <a class="btn third" href="/merch/">Explore Merch</a>
         </div>
       </div>
