--- a/art/index.html
+++ b/art/index.html
@@ -6,12 +6,12 @@
   <title>Art • WolfPastry Studio</title>
   <meta name="description" content="Art gallery by WolfPastryVT." />
   <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="assets/favicon.ico" />
+  <link rel="icon" href="/assets/favicon.ico" />
 </head>
 <body>
 <header class="site-header">
   <div class="brand">
-    <img src="assets/logo.png" alt="WolfPastry Studio logo" class="logo" onerror="this.style.display='none'">
+    <img src="/assets/logo.png" alt="WolfPastry Studio logo" class="logo" onerror="this.style.display='none'">
     <h1>WolfPastry Studio</h1>
     <p class="tagline">Art ✦ Streaming ✦ Commissions</p>
   </div>
@@ -37,11 +37,11 @@
     <div class="grid gallery">
       <!-- Duplicate these figure blocks for each piece -->
       <figure class="card">
-        <img src="assets/art/sample1.jpg" alt="Sample art 1" loading="lazy" />
+        <img src="assets/sample1.png" alt="Sample art 1" loading="lazy" />
         <figcaption>Sample Art #1 — Emote Pack</figcaption>
       </figure>
       <figure class="card">
-        <img src="assets/art/sample2.jpg" alt="Sample art 2" loading="lazy" />
+        <img src="assets/sample2.png" alt="Sample art 2" loading="lazy" />
         <figcaption>Sample Art #2 — Stream Panels</figcaption>
       </figure>
     </div>
