--- a/art/index.html
+++ b/art/index.html
@@ -37,11 +37,11 @@
     <div class="grid gallery">
       <!-- Duplicate these figure blocks for each piece -->
       <figure class="card">
-        <img src="assets/sample1.png" alt="Sample art 1" loading="lazy" />
+        <img src="/assets/sample1.png" alt="Sample art 1" loading="lazy" />
         <figcaption>Sample Art #1 — Emote Pack</figcaption>
       </figure>
       <figure class="card">
-        <img src="assets/sample2.png" alt="Sample art 2" loading="lazy" />
+        <img src="/assets/sample2.png" alt="Sample art 2" loading="lazy" />
         <figcaption>Sample Art #2 — Stream Panels</figcaption>
       </figure>
     </div>
