--- a/art/index.html
+++ b/art/index.html
@@ -32,7 +32,7 @@
 <main>
   <section class="section">
     <h3>Gallery</h3>
-    <p>Add pieces to <code>assets/art/</code> and list them below.</p>
+    <p>Add pieces to <code>assets/</code> and list them below.</p>
 
     <div class="grid gallery">
       <!-- Duplicate these figure blocks for each piece -->
