--- a/art/index.html
+++ b/art/index.html
@@ -31,21 +31,26 @@
 
 <main>
   <section class="section">
-    <h3>Gallery</h3>
-    <p>Add pieces to <code>assets/</code> and list them below.</p>
-
-    <div class="grid gallery">
-      <!-- Duplicate these figure blocks for each piece -->
-      <figure class="card">
-        <img src="/assets/sample1.png" alt="Sample art 1" loading="lazy" />
-        <figcaption>Sample Art #1 — Emote Pack</figcaption>
-      </figure>
-      <figure class="card">
-        <img src="/assets/sample2.png" alt="Sample art 2" loading="lazy" />
-        <figcaption>Sample Art #2 — Stream Panels</figcaption>
-      </figure>
-    </div>
-  </section>
+  <h3>Art Categories</h3>
+  <div class="grid gallery">
+    <a class="card" href="/art/illustrations/" style="text-decoration:none;">
+      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Illustrations</strong> — Character art, scenes</figcaption></figure>
+    </a>
+    <a class="card" href="/art/emotes/" style="text-decoration:none;">
+      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Emotes</strong> — Twitch/Discord sets</figcaption></figure>
+    </a>
+    <a class="card" href="/art/panels/" style="text-decoration:none;">
+      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Panels</strong> — Stream panels</figcaption></figure>
+    </a>
+    <a class="card" href="/art/fanart/" style="text-decoration:none;">
+      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Fanart Received</strong> — Community love ♡</figcaption></figure>
+    </a>
+  </div>
+</section>
 </main>
 
 <footer class="site-footer">
