--- a/art/index.html
+++ b/art/index.html
@@ -41,9 +41,13 @@
       <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
       <figcaption><strong>Emotes</strong> — Twitch/Discord sets</figcaption></figure>
     </a>
-    <a class="card" href="/art/panels/" style="text-decoration:none;">
+    <a class="card" href="/art/assets/" style="text-decoration:none;">
       <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
-      <figcaption><strong>Panels</strong> — Stream panels</figcaption></figure>
+      <figcaption><strong>Assets</strong> — Stream assets</figcaption></figure>
+    </a>
+    <a class="card" href="/art/miscellaneous/" style="text-decoration:none;">
+      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Other Services</strong> — MC Skins, Discord Servers, etc.</figcaption></figure>
     </a>
     <a class="card" href="/art/fanart/" style="text-decoration:none;">
       <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
