--- a/art/index.html
+++ b/art/index.html
@@ -34,23 +34,23 @@
   <h3>Art Categories</h3>
   <div class="grid gallery">
     <a class="card" href="/art/illustrations/" style="text-decoration:none;">
-      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
       <figcaption><strong>Illustrations</strong> — Character art, scenes</figcaption></figure>
     </a>
     <a class="card" href="/art/emotes/" style="text-decoration:none;">
-      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
       <figcaption><strong>Emotes</strong> — Twitch/Discord sets</figcaption></figure>
     </a>
     <a class="card" href="/art/assets/" style="text-decoration:none;">
-      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
       <figcaption><strong>Assets</strong> — Stream assets</figcaption></figure>
     </a>
     <a class="card" href="/art/miscellaneous/" style="text-decoration:none;">
-      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
       <figcaption><strong>Other Services</strong> — MC Skins, Discord Servers, etc.</figcaption></figure>
     </a>
     <a class="card" href="/art/fanart/" style="text-decoration:none;">
-      <figure><img src="../assets/cover.jpg" alt="" loading="lazy" onerror="this.style.display='none'">
+      <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
       <figcaption><strong>Fanart Received</strong> — Community love ♡</figcaption></figure>
     </a>
   </div>
