--- a/contact/index.html
+++ b/contact/index.html
@@ -6,12 +6,12 @@
   <title>Contact • WolfPastry Studio</title>
   <meta name="description" content="Contact WolfPastry Studio." />
   <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="assets/favicon.ico" />
+  <link rel="icon" href="/assets/favicon.ico" />
 </head>
 <body>
 <header class="site-header">
   <div class="brand">
-    <img src="assets/logo.png" alt="WolfPastry Studio logo" class="logo" onerror="this.style.display='none'">
+    <img src="/assets/logo.png" alt="WolfPastry Studio logo" class="logo" onerror="this.style.display='none'">
     <h1>WolfPastry Studio</h1>
     <p class="tagline">Art ✦ Streaming ✦ Commissions</p>
   </div>
