--- a/art/illustrations/index.html
+++ b/art/illustrations/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Commissions • Illustration — WolfPastry Studio</title>
-  <meta name="description" content="Illustration commission details, pricing, and examples." />
+  <title>Art • Illustrations — WolfPastry Studio</title>
+  <meta name="description" content="Illustrations by WolfPastry Studio." />
   <link rel="stylesheet" href="../../styles.css" />
   <link rel="icon" href="../../assets/favicon.ico" />
 </head>
@@ -32,44 +32,30 @@
 <main class="section">
   <div class="section-wrap">
     <aside class="section-nav">
-      <h4>Commissions</h4>
-      <a href="/commissions/">Overview</a>
-      <a href="/commissions/illustration/">Illustration</a>
-      <a href="/commissions/emotes/">Emotes</a>
-      <a href="/commissions/panels/">Panels</a>
-      <!-- add other services -->
+      <h4>Art</h4>
+      <a href="/art/">Overview</a>
+      <a href="/art/illustrations/">Illustrations</a>
+      <a href="/art/emotes/">Emotes</a>
+      <a href="/art/assets/">Stream Assets</a>
+      <a href="/art/miscellaneous/">Other Services</a>
+      <a href="/art/fanart/">Fanart Received</a>
     </aside>
 
     <div>
-      <h3>Illustration Commissions</h3>
-      <ul class="pricing">
-        <li><strong>Bust Up:</strong> $25</li>
-        <li><strong>Half Body:</strong> $40</li>
-        <li><strong>Full Body:</strong> $50</li>
-        <li><em>Add-ons:</em> extra outfit +$10, detailed bg +$5, extra character +$10</li>
-      </ul>
+      <h3>Illustrations</h3>
+      <p class="note">Add PNGs to <code>assets/art/emotes/</code> and reference them below.</p>
 
-      <div class="cta-group" style="margin-top:10px;">
-        <a class="btn" href="https://forms.gle/your-form" target="_blank" rel="noopener">Request Illustration</a>
-        <a class="btn secondary" href="https://trello.com/your-queue" target="_blank" rel="noopener">Queue</a>
-      </div>
-
-      <h4 style="margin-top:20px;">Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/art/illustrations/sample-1.jpg" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Full body commission</figcaption>
+          <img src="../../assets/sample1.png" alt="Happy emote" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Illustrations for @example</figcaption>
         </figure>
+        <figure class="card">
+          <img src="../../assets/sample2.png" alt="Cozy emote" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Illustrations</figcaption>
+        </figure>
+        <!-- Duplicate figure blocks for each piece -->
       </div>
-
-      <details style="margin-top:14px;">
-        <summary>Terms for Illustration</summary>
-        <ul>
-          <li>Personal use allowed; commercial/licensing by agreement.</li>
-          <li>Typical delivery ~1 month from start.</li>
-          <li>Revisions: sketch approval + 1 minor pass after color.</li>
-        </ul>
-      </details>
     </div>
   </div>
 </main>
