--- a/commissions/index.html
+++ b/commissions/index.html
@@ -31,6 +31,16 @@
 
 <main>
 <section class="section">
+  <div class="section-wrap">
+    <aside class="section-nav">
+      <h4>Commissions</h4>
+      <a href="/commissions/">Overview</a>
+      <a href="/commissions/illustration/">Illustrations</a>
+      <a href="/commissions/emotes/">Emotes</a>
+      <a href="/commissions/assets/">Stream Assets</a>
+      <a href="/commissions/miscellaneous/">Other Services</a>
+    </aside>
+  </div>
       <h3>Commissions</h3>
       <div class="grid two">
         <div>
@@ -52,16 +62,6 @@
             </ul>
           </details>
         </div>
-        <div class="section-wrap">
-        <aside class="section-nav">
-      <h4>Commissions</h4>
-      <a href="/commissions/">Overview</a>
-      <a href="/commissions/illustration/">Illustration</a>
-      <a href="/commissions/emotes/">Emotes</a>
-      <a href="/commissions/assets/">Stream Assets</a>
-      <a href="/commissions/miscellaneous/">Other Services</a>
-          </aside>
-          </div>
         <div>
           <h4>Request a Commission</h4>
           <form id="commissionForm" class="form" onsubmit="return submitCommission(this)">
