--- a/commissions/index.html
+++ b/commissions/index.html
@@ -35,12 +35,14 @@
     <aside class="section-nav">
       <h4>Commissions</h4>
       <a href="/commissions/">Overview</a>
-      <a href="/commissions/illustration/">Illustrations</a>
+      <a href="/commissions/illustrations/">Illustrations</a>
       <a href="/commissions/emotes/">Emotes</a>
       <a href="/commissions/assets/">Stream Assets</a>
       <a href="/commissions/miscellaneous/">Other Services</a>
     </aside>
   </div>
+</section>
+  <section class="section">
       <h3>Commissions</h3>
       <div class="grid two">
         <div>
