--- a/commissions/miscellaneous/index.html
+++ b/commissions/miscellaneous/index.html
@@ -51,13 +51,13 @@
 
       <div class="cta-group" style="margin-top:10px;">
         <a class="btn" href="https://forms.gle/your-form" target="_blank" rel="noopener">Request Other Services</a>
-        <a class="btn secondary" href="https://trello.com/your-queue" target="_blank" rel="noopener">Queue</a>
+        <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
       </div>
 
       <h4 style="margin-top:20px;">Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/illustrations/sample1.pngg" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
+          <img src="../../assets/sample1.pngg" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
           <figcaption>Full body commission</figcaption>
         </figure>
       </div>
