--- a/commissions/miscellaneous/index.html
+++ b/commissions/miscellaneous/index.html
@@ -57,7 +57,7 @@
       <h4 style="margin-top:20px;">Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/sample1.pngg" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
+          <img src="../../assets/sample1.png" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
           <figcaption>Full body commission</figcaption>
         </figure>
       </div>
