--- a/commissions/miscellaneous/index.html
+++ b/commissions/miscellaneous/index.html
@@ -57,8 +57,8 @@
       <h4 style="margin-top:20px;">Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/sample1.png" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Full body commission</figcaption>
+          <img src="../../assets/sample1.png" alt="Other example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Other commission</figcaption>
         </figure>
       </div>
 
