--- a/commissions/assets/index.html
+++ b/commissions/assets/index.html
@@ -1,1 +1,82 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Commissions • Stream Assets — WolfPastry Studio</title>
+  <meta name="description" content="Stream Asset commission details, pricing, and examples." />
+  <link rel="stylesheet" href="../../styles.css" />
+  <link rel="icon" href="../../assets/favicon.ico" />
+</head>
+<body>
+<header class="site-header">
+  <div class="brand">
+    <img src="../../assets/logo.png" alt="WolfPastry Studio logo" class="logo" onerror="this.style.display='none'">
+    <h1>WolfPastry Studio</h1>
+    <p class="tagline">Art ✦ Streaming ✦ Commissions</p>
+  </div>
+  <nav class="nav" id="nav">
+    <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
+    <ul class="nav-list">
+      <li><a href="/">Home</a></li>
+      <li><a href="/art/">Art</a></li>
+      <li><a href="/commissions/">Commissions</a></li>
+      <li><a href="/stream/">Stream</a></li>
+      <li><a href="/merch/">Merch</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/contact/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
+<main class="section">
+  <div class="section-wrap">
+    <aside class="section-nav">
+      <h4>Commissions</h4>
+      <a href="/commissions/">Overview</a>
+      <a href="/commissions/illustrations/">Illustration</a>
+      <a href="/commissions/emotes/">Emotes</a>
+      <a href="/commissions/assets/">Stream Assets</a>
+      <a href="/commissions/miscellaneous/">Other Services</a>
+    </aside>
+
+    <div>
+      <h3>Stream Asset Commissions</h3>
+      <ul class="pricing">
+        <li><strong>Bust Up:</strong> $25</li>
+        <li><strong>Half Body:</strong> $40</li>
+        <li><strong>Full Body:</strong> $50</li>
+        <li><em>Add-ons:</em> extra outfit +$10, detailed bg +$5, extra character +$10</li>
+      </ul>
+
+      <div class="cta-group" style="margin-top:10px;">
+        <a class="btn" href="https://forms.gle/your-form" target="_blank" rel="noopener">Request Stream Assets</a>
+        <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
+      </div>
+
+      <h4 style="margin-top:20px;">Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <img src="../../assets/sample1.png" alt="Stream Assets example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Stream Asset commission</figcaption>
+        </figure>
+      </div>
+
+      <details style="margin-top:14px;">
+        <summary>Terms for Stream Assets</summary>
+        <ul>
+          <li>Personal use allowed; commercial/licensing by agreement.</li>
+          <li>Typical delivery ~1 month from start.</li>
+          <li>Revisions: sketch approval + 1 minor pass after color.</li>
+        </ul>
+      </details>
+    </div>
+  </div>
+</main>
+
+<footer class="site-footer">
+  <p>© <span id="year"></span> WolfPastry Studio • All rights reserved.</p>
+</footer>
+<script src="../../script.js"></script>
+</body>
+</html>
