--- a/commissions/index.html
+++ b/commissions/index.html
@@ -40,8 +40,7 @@
       <a href="/commissions/assets/">Stream Assets</a>
       <a href="/commissions/miscellaneous/">Other Services</a>
     </aside>
-  </div>
-</section>
+  <div>
   <section class="section">
       <h3>Commissions</h3>
       <div class="grid two">
@@ -95,7 +94,9 @@
           <p class="note">This sample form uses a mailto fallback by default. You can later wire it to a serverless function or backend.</p>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+  </section>
 </main>
 
 <footer class="site-footer">
