--- a/stream/index.html
+++ b/stream/index.html
@@ -31,6 +31,12 @@
 
 <main>
 <section class="section">
+  <a class="card" href="/stream/community/" style="text-decoration:none;">
+  <figure>
+    <img src="../assets/cover.jpg" alt="Community" loading="lazy" onerror="this.style.display='none'">
+    <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
+  </figure>
+</a>
       <h3>Stream Hub</h3>
       <div class="grid two">
         <div>
