--- a/stream/index.html
+++ b/stream/index.html
@@ -33,7 +33,7 @@
 <section class="section">
   <a class="card" href="/stream/community/" style="text-decoration:none;">
   <figure>
-    <img src="../assets/cover.jpg" alt="Community" loading="lazy" onerror="this.style.display='none'">
+    <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
     <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
   </figure>
 </a>
