--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stream • Community — WolfPastry Studio</title>
   <meta name="description" content="Community info, Discord, shout-outs, and where I mod/admin." />
-  <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="stylesheet" href="../../styles.css" />
+  <link rel="icon" href="../../assets/favicon.ico" />
 </head>
 <body>
 <header class="site-header">
