--- a/stream/index.html
+++ b/stream/index.html
@@ -40,12 +40,18 @@
             <li>Fri · 9 PM ET — Game night</li>
           </ul>
         </div>
-        <a class="card" href="/stream/community/" style="text-decoration:none;">
-  <figure>
-    <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
-    <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
-  </figure>
-</a>
+  <a class="card" href="/stream/community/" style="text-decoration:none;">
+    <figure>
+      <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
+    </figure>
+  </a>
+  <a class="card" href="/stream/model/" style="text-decoration:none;">
+    <figure>
+      <img src="/assets/cover.png" alt="Model" loading="lazy" onerror="this.style.display='none'">
+      <figcaption><strong>Who is Luna?</strong> — OC Model Info and Lore</figcaption>
+    </figure>
+  </a>
         <div>
           <h4>Live Embed</h4>
           <div class="embed">
