--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -36,6 +36,7 @@
       <h4>Stream</h4>
       <a href="/stream/">Overview</a>
       <a href="/stream/community/">Community</a>
+      <a href="/stream/model/">Who is Luna?</a>
       <!-- Add more later, e.g.: <a href="/stream/clips/">Clips</a> -->
     </aside>
 
@@ -113,7 +114,7 @@
 
       <section>
         <h4>Credits & Support</h4>
-        <p>Art, overlays, and assets will be credited on the <a href="/model/">Model</a> page and/or post captions. Thank you for supporting the pack ♡</p>
+        <p>Art, overlays, and assets will be credited on the <a href="/art/fanart/">Fanart Recieved</a> page and/or post captions. Thank you for supporting the pack ♡</p>
       </section>
     </div>
   </div>
